# vnlp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Cloud Turkish NLP solutions.ipynb  Examples.ipynb  MANIFEST.in  README.md  examples.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
docs/: requirements.txt
docs/source/: conf.py  index.md  quickstart.md
pp/: __init__.py  _utils.py  requirements.txt  utils.py
pp/_resources/: abbrevations.txt  mwe_lexicon.txt  non_breaking_prefixes_tr.txt
pp/dependency_parser/: ReadMe.md  _utils.py  dependency_parser.py
pp/morph_analyzer/: LICENSE  data_utils.py  model.py  morph_analyzer.py  pyvenv.cfg  run.py
pp/named_entitiy_recognizer/: ReadMe.md  Training CharNER.ipynb  _utils.py  ner.py
pp/named_entity_recognizer/: ReadMe.md
pp/normalizer/: _deasciifier.py  normalizer.py
pp/part_of_speech_tagger/: ReadMe.md  _utils.py  pos_tagger.py
pp/sentence_splitter/: sentence_splitter.py
pp/sentiment_analyzer/: ReadMe.md  __init__.py  sentiment_analyzer.py
pp/stemmer_morph_analyzer/: ReadMe.md  __init__.py  stemmer_morph_analyzer.py
pp/stopword_remover/: stopword_remover.py
pp/tokenizer/: __init__.py  tokenizer.py
pp/turkish_embeddings/: ReadMe.md  example.ipynb
tests/: test_general.py
tr-nlp-pp/: __init__.py
tr-nlp-pp/_resources/: mwe_lexicon.txt  turkce_stop_words.txt
tr-nlp-pp/morph_analyzer/: README.md  __init__.py  candidate_generators.py  requirements.txt  utils.py
tr-nlp-pp/normalizer/: normalizer.py
vnlp/: __init__.py  requirements.txt  utils.py
(+119 files in other folders)
