[metadata]
name = vnlp
version = 0.1
description= NLP Tools for Turkish Language.
author = Meliksah Turker
author_email = turkermeliksah@hotmail.com
license = Apache License 2.0
classifiers = Development Status :: 3 - Alpha

[options]
packages = find:
include_package_data = True
install_requires =
	regex==2021.8.28
	tensorflow>2.3.0
	cyhunspell==2.0.2

[options.package_data]
* = _resources, resources, *.txt, *.hdf5, *.md, *.pickle


[options.entry_points]
console_scripts = vnlp=vnlp.bin.vnlp:main