[metadata]
name = vnlp
version = 0.1
description= NLP Tools for Turkish Language.
author = Meliksah Turker
author_email = turkermeliksah@hotmail.com
license = Apache License 2.0
classifiers = Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
install_requires =
	numpy==1.19.5
	regex==2021.8.28
	tensorflow==2.4.1
	cyhunspell==2.0.2

[options.entry_points]
console_scripts = vnlp=vnlp.bin.vnlp:main